force-app/main/default/objects/PPSTN_ClientTradingAccount__c/PPSTN_ClientTradingAccount__c.object-meta.xml
<CustomObject>
    <label>PPSTN_ClientTradingAccount</label>
    <nameField>
        <displayFormat>CTA-{000000}</displayFormat>
        <label>SFClientTradingAccount</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPSTN_ClientTradingAccounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>