force-app/main/default/objects/PPSTN_ClientTradingAccount__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PPSTN_ClientTradingAccounts</relationshipLabel>
    <relationshipName>PPSTN_ClientTradingAccounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>