force-app/main/default/objects/PPSTN_ClientTradingAccount__c/fields/TradingAccountBalance__c.field-meta.xml
<CustomField>
    <fullName>TradingAccountBalance__c</fullName>
    <label>TradingAccountBalance</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>