force-app/main/default/objects/PPSTN_ClientTradingAccount__c/fields/TradingAccountId__c.field-meta.xml
<CustomField>
    <fullName>TradingAccountId__c</fullName>
    <externalId>true</externalId>
    <label>TradingAccountId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>