force-app/main/default/objects/PPSTN_ClientTradingAccount__c/fields/TradingAccountType__c.field-meta.xml
<CustomField>
    <fullName>TradingAccountType__c</fullName>
    <label>TradingAccountType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Razor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>