force-app/main/default/objects/PPSTN_ClientTradingAccount__c/fields/TradingPlatform__c.field-meta.xml
<CustomField>
    <fullName>TradingPlatform__c</fullName>
    <label>TradingPlatform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MT4</fullName>
            </value>
            <value>
                <fullName>CTrader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>